--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style-contato.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="validate.js"></script>
+    <script src="validate.js" type="text/javascript"></script>
     <title>Contato</title>
 
     <style>
@@ -22,66 +22,67 @@
 
 <body>
     <div class="container-fluid">
-        <div class="foto">
-            <img src="img/s2.jpg" alt="">
-        </div>
-        <p>Informações básicas do contato</p>
-        <div class="form-row">
-            <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="Nome Completo">
+        <form action="" id="formulario" method="post" name="formulario">
+            <div class="foto">
+                <img src="img/s2.jpg" alt="">
             </div>
-        </div>
-        <div class="form-row">
-            <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="Telefone">
+            <p>Informações básicas do contato</p>
+            <div class="form-row">
+                <div class="col-md-6">
+                    <input type="text" class="form-control" placeholder="Nome Completo" name="nomeCompleto" required>
+                    <span class="error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+            <div class="form-row">
+                <div class="col-md-6">
+                    <input type="number" class="form-control" placeholder="Telefone" name="telefone" required>
+                    <span class="error"></span>
+                </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <input type="date" class="form-control" name="nasc" id="nasc">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email" name="email">
+                </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="col-md-6">
-                <input type="text" class="form-control" name="idade" id="idade" placeholder="Idade" disabled>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="date" class="form-control" name="dataNascimento" id="dataNascimento" value="" required
+                        onchange="validate()">
+                </div>
             </div>
-        </div>
-        <p>Informações adicionais sobre o contato</p>
-        <div>
-            <label for="parente"></label>
-            <input type="checkbox" id="parente" name="parente"> <label for="parente">Esse contato é um
-                parente?</label>
-        </div>
-        <p>De onde você conhece esse contato?</p>
-        <div class="custom-control custom-radio custom-control-inline-sm-6">
-            <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline1">Escola</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline-sm-6">
-            <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline2">Trabalho</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline-sm-6">
-            <input type="radio" id="customRadioInline3" name="customRadioInline1" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline3">Festas</label>
-        </div>
+            <div class="form-row">
+                <div class="col-md-6">
+                    <input type="text" class="form-control" name="idade" id="idade" placeholder="Idade" readonly>
+                </div>
+            </div>
+            <p>Informações adicionais sobre o contato</p>
+            <div>
+                <label for="parente"></label>
+                <input type="checkbox" id="parente" name="parente"> <label for="parente">Esse contato é um
+                    parente?</label>
+            </div>
+            <div class="form-group col-sm-6">
+                <label for="exampleFormControlSelect1">De onde você conhece esse contato?</label>
+                <select class="form-control form-control-sm-6" id="exampleFormControlSelect1">
+                    <option>Escola</option>
+                    <option>Faculdade</option>
+                    <option>Festas</option>
+                    <option>Trabalho</option>
+                </select>
+            </div>
 
-        <p>Sexo</p>
-        <div class="custom-control custom-radio custom-control-inline-sm-6">
-            <input type="radio" id="customRadioInline4" name="customRadioInline1" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline4">Masculino</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline-sm-6">
-            <input type="radio" id="customRadioInline5" name="customRadioInline1" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline5">Feminino</label>
-        </div>
-        <div>
-            <button type="submit" class="btn btn-primary">Salvar</button>
-        </div>
+            <p>Sexo</p>
+            <div class="custom-control custom-radio custom-control-inline-sm-6">
+                <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
+                <label class="custom-control-label" for="customRadioInline1" value="masculino">Masculino</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline-sm-6">
+                <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
+                <label class="custom-control-label" for="customRadioInline2" value="feminino">Feminino</label>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+        </form>
     </div>
 </body>
